2001-10-01  Matthias Clasen  <matthiasc@poet.de>

	* gtk/gtkitemfactory.c (gtk_item_factory_parse_rc_scanner): replace
	g_scanner_add/remove_symbol by g_scanner_scope_add/remove_symbol.

	* gtk/gtkrc.c (gtk_rc_parse_any): here as well.

Mon Oct  1 14:07:02 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_size_allocate): change
	scroll_to_cell delayed code to happen in size_allocate.

	* gtk/gtkstyle.c (gtk_default_draw_expander): change
	prelight/normal arrow drawing.

	* gtk/gtktreedatalist.c: Change compare func to use g_utf8_collate

	* gtk/gtktreestore.c: refactor.

Sun Sep 30 22:15:52 2001  Manish Singh  <yosh@gimp.org>

	* gtk/gtkcheckbutton.c (gtk_check_button_size_allocate): Applied
	patch from Soeren Sandmann <sandmann@daimi.au.dk>. Vertically
	centers the child in relation to the to indicator height.

Sun Sep 30 15:11:59 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreestore.c (gtk_tree_store_remove): Make ITERS_PERSIST
	correct

Sun Sep 30  07:01:42 2001 CEST <mikeh@bahnhof.se>

	* gtk/gtkcellrenderertext.c: I reverted back to old "weight"
	property code using g_param_spec_int and changed from
	g_value_get_enum to g_value_get_int instead. Probably a better way
	to fix the problem :-)

Sun Sep 30  05:31:32 2001 CEST Mikael Hermansson <tyan@linux.se>

    * gtk/gtkcellrenderertext.c changed "weight" property type from 
      g_param_spec_int to g_param_spec_enum.

Sat Sep 29 12:25:26 2001  Manish Singh  <yosh@gimp.org>

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_class_init): typo
	fix: s/Wether/Whether/ in reorderable property description

Thu Sep 27 16:46:36 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_real_select_cursor_row): only
	start editing when you select with a keyboard.

	(gtk_tree_view_button_press_event): much more graceful now.

	* gtk/gtkstyle.c: Draw togglebutton better.

2001-09-26  Havoc Pennington  <hp@redhat.com>
