@@ -34,6 +34,8 @@ static void         gtk_tree_store_tree_model_init (GtkTreeModelIface *iface);
 static void         gtk_tree_store_drag_source_init(GtkTreeDragSourceIface *iface);
 static void         gtk_tree_store_drag_dest_init  (GtkTreeDragDestIface   *iface);
 static void         gtk_tree_store_sortable_init   (GtkTreeSortableIface   *iface);
+static void         gtk_tree_store_finalize        (GObject           *object);
+static void         gtk_tree_store_destroy         (GtkObject         *object);
 static guint        gtk_tree_store_get_flags       (GtkTreeModel      *tree_model);
 static gint         gtk_tree_store_get_n_columns   (GtkTreeModel      *tree_model);
 static GType        gtk_tree_store_get_column_type (GtkTreeModel      *tree_model,
@@ -194,9 +196,13 @@ static void
 gtk_tree_store_class_init (GtkTreeStoreClass *tree_store_class)
 {
   GObjectClass *object_class;
+  GtkObjectClass *gobject_class;
 
   object_class = (GObjectClass *) tree_store_class;
+  gobject_class = (GtkObjectClass *) tree_store_class;
 
+  object_class->finalize = gtk_tree_store_finalize;
+  gobject_class->destroy = gtk_tree_store_destroy;
 }
 
 static void
@@ -330,14 +336,6 @@ gtk_tree_store_newv (gint   n_columns,
   return retval;
 }
 
-/**
- * gtk_tree_store_set_n_columns:
- * @tree_store:
- * @n_columns:
- *
- * As a side effect of calling this function, all sort columns that overlap with
- * the current number of columns will be removed.
- **/
 static void
 gtk_tree_store_set_n_columns (GtkTreeStore *tree_store,
 			      gint          n_columns)
@@ -395,6 +393,35 @@ gtk_tree_store_set_column_type (GtkTreeStore *tree_store,
       return;
     }
   tree_store->column_headers[column] = type;
+}
+
+static void
+node_free (GNode *node, gpointer data)
+{
+  _gtk_tree_data_list_free (node->data, (GType*)data);
+}
+
+static void
+gtk_tree_store_finalize (GObject *object)
+{
+  GtkTreeStore *tree_store = GTK_TREE_STORE (object);
+
+  g_node_children_foreach (tree_store->root, G_TRAVERSE_LEAFS, node_free, tree_store->column_headers);
+  _gtk_tree_data_list_header_free (tree_store->sort_list);
+  g_free (tree_store->column_headers);
+}
+
+static void
+gtk_tree_store_destroy (GtkObject *gobject)
+{
+  GtkTreeStore *tree_store = GTK_TREE_STORE (gobject);
+
+  if (tree_store->default_sort_destroy)
+    {
+      (* tree_store->default_sort_destroy) (tree_store->default_sort_data);
+      tree_store->default_sort_destroy = NULL;
+      tree_store->default_sort_data = NULL;
+    }
 }
 
 /* fulfill the GtkTreeModel requirements */
