@@ -90,7 +90,8 @@ struct _GtkTreeViewClass
 				           GtkMovementStep    step,
 				           gint               count);
   void     (* select_all)                 (GtkTreeView       *tree_view);
-  void     (* select_cursor_row)          (GtkTreeView       *tree_view);
+  void     (* select_cursor_row)          (GtkTreeView       *tree_view,
+					   gboolean           start_editing);
   void     (* toggle_cursor_row)          (GtkTreeView       *tree_view);
   void     (* expand_collapse_cursor_row) (GtkTreeView       *tree_view,
 					   gboolean           logical,
